Adding SpringDoc